--- a/src/main/webapp/arrangementtype/Edit.xhtml
+++ b/src/main/webapp/arrangementtype/Edit.xhtml
@@ -13,11 +13,11 @@
             <h:form id="ArrangementtypeEditForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{arrangementtypeController.selected != null}">
-                        <p:outputLabel value="#{bundle.EditArrangementtypeLabel_arrangementtypeid}" for="arrangementtypeid" />
+                        <p:outputLabel value="Type ID" for="arrangementtypeid" />
                         <p:inputText id="arrangementtypeid" value="#{arrangementtypeController.selected.arrangementtypeid}" title="#{bundle.EditArrangementtypeTitle_arrangementtypeid}" required="true" requiredMessage="#{bundle.EditArrangementtypeRequiredMessage_arrangementtypeid}"/>
-                        <p:outputLabel value="#{bundle.EditArrangementtypeLabel_arrangementtype}" for="arrangementtype" />
+                        <p:outputLabel value="Type" for="arrangementtype" />
                         <p:inputText id="arrangementtype" value="#{arrangementtypeController.selected.arrangementtype}" title="#{bundle.EditArrangementtypeTitle_arrangementtype}" required="true" requiredMessage="#{bundle.EditArrangementtypeRequiredMessage_arrangementtype}"/>
-                        <p:outputLabel value="#{bundle.EditArrangementtypeLabel_arrangement}" for="arrangement" />
+                        <p:outputLabel value="Arrangement" for="arrangement" />
                         <p:selectOneMenu id="arrangement" value="#{arrangementtypeController.selected.arrangement}" >
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{arrangementController.itemsAvailableSelectOne}"
