--- a/src/main/webapp/equipmentrent/Edit.xhtml
+++ b/src/main/webapp/equipmentrent/Edit.xhtml
@@ -13,19 +13,19 @@
             <h:form id="EquipmentrentEditForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{equipmentrentController.selected != null}">
-                        <p:outputLabel value="#{bundle.EditEquipmentrentLabel_equipmentrentid}" for="equipmentrentid" />
+                        <p:outputLabel value="Rent ID" for="equipmentrentid" />
                         <p:inputText id="equipmentrentid" value="#{equipmentrentController.selected.equipmentrentid}" title="#{bundle.EditEquipmentrentTitle_equipmentrentid}" required="true" requiredMessage="#{bundle.EditEquipmentrentRequiredMessage_equipmentrentid}"/>
-                        <p:outputLabel value="#{bundle.EditEquipmentrentLabel_durationperminute}" for="durationperminute" />
+                        <p:outputLabel value="Rented duration in minutes" for="durationperminute" />
                         <p:inputText id="durationperminute" value="#{equipmentrentController.selected.durationperminute}" title="#{bundle.EditEquipmentrentTitle_durationperminute}" />
-                        <p:outputLabel value="#{bundle.EditEquipmentrentLabel_startdate}" for="startdate" />
+                        <p:outputLabel value="Rent start date" for="startdate" />
                         <p:calendar id="startdate" pattern="MM/dd/yyyy" value="#{equipmentrentController.selected.startdate}" title="#{bundle.EditEquipmentrentTitle_startdate}"  showOn="button"/>
-                        <p:outputLabel value="#{bundle.EditEquipmentrentLabel_starttime}" for="starttime" />
+                        <p:outputLabel value="Rent start time" for="starttime" />
                         <p:calendar id="starttime" pattern="HH:mm:ss" value="#{equipmentrentController.selected.starttime}" title="#{bundle.EditEquipmentrentTitle_starttime}"  showOn="button"/>
-                        <p:outputLabel value="#{bundle.EditEquipmentrentLabel_state}" for="state" />
+                        <p:outputLabel value="Rented status" for="state" />
                         <p:inputText id="state" value="#{equipmentrentController.selected.state}" title="#{bundle.EditEquipmentrentTitle_state}" />
-                        <p:outputLabel value="#{bundle.EditEquipmentrentLabel_total}" for="total" />
+                        <p:outputLabel value="Total amount of equipment" for="total" />
                         <p:inputText id="total" value="#{equipmentrentController.selected.total}" title="#{bundle.EditEquipmentrentTitle_total}" />
-                        <p:outputLabel value="#{bundle.EditEquipmentrentLabel_reservationid}" for="reservationid" />
+                        <p:outputLabel value="Reservation ID" for="reservationid" />
                         <p:selectOneMenu id="reservationid" value="#{equipmentrentController.selected.reservationid}" >
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{reservationController.itemsAvailableSelectOne}"
