--- a/src/main/webapp/material/List.xhtml
+++ b/src/main/webapp/material/List.xhtml
@@ -29,37 +29,37 @@
 
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMaterialTitle_materialid}"/>
+                            <h:outputText value="Material ID"/>
                         </f:facet>
                         <h:outputText value="#{item.materialid}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMaterialTitle_mass}"/>
+                            <h:outputText value="Weight in kg"/>
                         </f:facet>
                         <h:outputText value="#{item.mass}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMaterialTitle_materialquality}"/>
+                            <h:outputText value="Quality"/>
                         </f:facet>
                         <h:outputText value="#{item.materialquality}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMaterialTitle_materialquantity}"/>
+                            <h:outputText value="Quantity"/>
                         </f:facet>
                         <h:outputText value="#{item.materialquantity}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMaterialTitle_materialtype}"/>
+                            <h:outputText value="Type"/>
                         </f:facet>
                         <h:outputText value="#{item.materialtype}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMaterialTitle_rentprice}"/>
+                            <h:outputText value="Price"/>
                         </f:facet>
                         <h:outputText value="#{item.rentprice}"/>
                     </p:column>
