--- a/src/main/webapp/users/Create.xhtml
+++ b/src/main/webapp/users/Create.xhtml
@@ -13,9 +13,9 @@
             <h:form id="UsersCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{usersController.selected != null}">
-                        <p:outputLabel value="#{bundle.CreateUsersLabel_username}" for="username" />
+                        <p:outputLabel value="Username" for="username" />
                         <p:inputText id="username" required="true" value="#{usersController.selected.username}" title="#{bundle.CreateUsersTitle_username}" />
-                        <p:outputLabel value="#{bundle.CreateUsersLabel_userpassword}" for="userpassword" />
+                        <p:outputLabel value="Password" for="userpassword" />
                         <p:inputText id="userpassword" required="true" value="#{usersController.selected.userpassword}" title="#{bundle.CreateUsersTitle_userpassword}" />
                     </p:panelGrid>
                     <p:commandButton actionListener="#{usersController.create}" value="#{bundle.Save}" update="display,:UsersListForm:datalist,:growl" oncomplete="handleSubmit(args,'UsersCreateDialog');"/>
