--- a/src/main/webapp/material/Edit.xhtml
+++ b/src/main/webapp/material/Edit.xhtml
@@ -13,17 +13,17 @@
             <h:form id="MaterialEditForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{materialController.selected != null}">
-                        <p:outputLabel value="#{bundle.EditMaterialLabel_materialid}" for="materialid" />
+                        <p:outputLabel value="Material ID" for="materialid" />
                         <p:inputText id="materialid" value="#{materialController.selected.materialid}" title="#{bundle.EditMaterialTitle_materialid}" required="true" requiredMessage="#{bundle.EditMaterialRequiredMessage_materialid}"/>
-                        <p:outputLabel value="#{bundle.EditMaterialLabel_mass}" for="mass" />
+                        <p:outputLabel value="Weight in kg" for="mass" />
                         <p:inputText id="mass" value="#{materialController.selected.mass}" title="#{bundle.EditMaterialTitle_mass}" />
-                        <p:outputLabel value="#{bundle.EditMaterialLabel_materialquality}" for="materialquality" />
+                        <p:outputLabel value="Quality" for="materialquality" />
                         <p:inputText id="materialquality" value="#{materialController.selected.materialquality}" title="#{bundle.EditMaterialTitle_materialquality}" />
-                        <p:outputLabel value="#{bundle.EditMaterialLabel_materialquantity}" for="materialquantity" />
+                        <p:outputLabel value="Quantity" for="materialquantity" />
                         <p:inputText id="materialquantity" value="#{materialController.selected.materialquantity}" title="#{bundle.EditMaterialTitle_materialquantity}" />
-                        <p:outputLabel value="#{bundle.EditMaterialLabel_materialtype}" for="materialtype" />
+                        <p:outputLabel value="Type" for="materialtype" />
                         <p:inputText id="materialtype" value="#{materialController.selected.materialtype}" title="#{bundle.EditMaterialTitle_materialtype}" />
-                        <p:outputLabel value="#{bundle.EditMaterialLabel_rentprice}" for="rentprice" />
+                        <p:outputLabel value="Price" for="rentprice" />
                         <p:inputText id="rentprice" value="#{materialController.selected.rentprice}" title="#{bundle.EditMaterialTitle_rentprice}" />
                     </p:panelGrid>
                     <p:commandButton actionListener="#{materialController.update}" value="#{bundle.Save}" update="display,:MaterialListForm:datalist,:growl" oncomplete="handleSubmit(args, 'MaterialEditDialog');"/>
