--- a/src/main/webapp/monitoring/List.xhtml
+++ b/src/main/webapp/monitoring/List.xhtml
@@ -29,7 +29,7 @@
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListMonitoringTitle_monitoringstartdate}"/>
+                                <h:outputText value="Start date"/>
                             </f:facet>
                             <h:outputText value="#{item.monitoringstartdate}">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
@@ -37,7 +37,7 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListMonitoringTitle_monitoringstarttime}"/>
+                                <h:outputText value="Start time"/>
                             </f:facet>
                             <h:outputText value="#{item.monitoringstarttime}">
                                 <f:convertDateTime pattern="HH:mm:ss" />
@@ -45,19 +45,19 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListMonitoringTitle_monitoringdurationperminute}"/>
+                                <h:outputText value="Duration in minutes"/>
                             </f:facet>
                             <h:outputText value="#{item.monitoringdurationperminute}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListMonitoringTitle_monitor}"/>
+                                <h:outputText value="Assigned monitor"/>
                             </f:facet>
                             <h:outputText value="#{item.monitor}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListMonitoringTitle_arrangement}"/>
+                                <h:outputText value="Arrangement"/>
                             </f:facet>
                             <h:outputText value="#{item.arrangement}"/>
                         </p:column>
