--- a/src/main/webapp/reservation/List.xhtml
+++ b/src/main/webapp/reservation/List.xhtml
@@ -39,19 +39,19 @@
                     <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListReservationTitle_reservationid}"/>
+                            <h:outputText value="Reservation ID"/>
                         </f:facet>
                         <h:outputText value="#{item.reservationid}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListReservationTitle_durationperminute}"/>
+                            <h:outputText value="Duration in minutes"/>
                         </f:facet>
                         <h:outputText value="#{item.durationperminute}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListReservationTitle_startdate}"/>
+                            <h:outputText value="Start date"/>
                         </f:facet>
                         <h:outputText value="#{item.startdate}">
                             <f:convertDateTime pattern="MM/dd/yyyy" />
@@ -59,7 +59,7 @@
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListReservationTitle_starttime}"/>
+                            <h:outputText value="Start time"/>
                         </f:facet>
                         <h:outputText value="#{item.starttime}">
                             <f:convertDateTime pattern="HH:mm:ss" />
@@ -67,19 +67,19 @@
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListReservationTitle_total}"/>
+                            <h:outputText value="Amount reserved"/>
                         </f:facet>
                         <h:outputText value="#{item.total}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListReservationTitle_clientid}"/>
+                            <h:outputText value="Client ID"/>
                         </f:facet>
                         <h:outputText value="#{item.clientid}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.EditClientTitle_lastname}"/>
+                            <h:outputText value="Client last name"/>
                         </f:facet>
                         <h:outputText value="#{clientController.getClient(item.clientid.clientid).lastname}"/>
                     </p:column>
