--- a/src/main/webapp/setup/List.xhtml
+++ b/src/main/webapp/setup/List.xhtml
@@ -31,7 +31,7 @@
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListSetupTitle_communication}"/>
+                                <h:outputText value="Message of the day"/>
                             </f:facet>
                             <h:outputText value="#{item.communication}"/>
                         </p:column>
