--- a/src/main/webapp/warehouse/Create.xhtml
+++ b/src/main/webapp/warehouse/Create.xhtml
@@ -13,13 +13,13 @@
             <h:form id="WarehouseCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{warehouseController.selected != null}">
-                        <p:outputLabel value="#{bundle.CreateWarehouseLabel_address}" for="address" />
+                        <p:outputLabel value="Address" for="address" />
                         <p:inputText id="address" required="true" value="#{warehouseController.selected.address}" title="#{bundle.CreateWarehouseTitle_address}" />
-                        <p:outputLabel value="#{bundle.CreateWarehouseLabel_phone}" for="phone" />
+                        <p:outputLabel value="Phone number" for="phone" />
                         <p:inputText id="phone" required="true" value="#{warehouseController.selected.phone}" title="#{bundle.CreateWarehouseTitle_phone}" />
-                        <p:outputLabel value="#{bundle.CreateWarehouseLabel_volume}" for="volume" />
+                        <p:outputLabel value="Storage capacity in m^3" for="volume" />
                         <p:inputText id="volume" required="true" value="#{warehouseController.selected.volume}" title="#{bundle.CreateWarehouseTitle_volume}" />
-                        <p:outputLabel value="#{bundle.CreateWarehouseLabel_zip}" for="zip" />
+                        <p:outputLabel value="ZIP code" for="zip" />
                         <p:inputText id="zip" required="true" value="#{warehouseController.selected.zip}" title="#{bundle.CreateWarehouseTitle_zip}" />
                     </p:panelGrid>
                     <p:commandButton actionListener="#{warehouseController.create}" value="#{bundle.Save}" update="display,:WarehouseListForm:datalist,:growl" oncomplete="handleSubmit(args,'WarehouseCreateDialog');"/>
